fixed_z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -225,6 +225,7 @@
   background-color: #1f1f1f;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 }
 
 .section-title_theme_dark {
@@ -233,7 +234,6 @@
   font-weight: 600;
   color: white;
   position: relative;
-  z-index: 1;
 }
 
 .section-subtitle_theme_dark {
@@ -242,7 +242,6 @@
   font-weight: normal;
   color: white;
   position: relative;
-  z-index: 1;
 }
 
 .table_theme_dark {
@@ -278,7 +277,7 @@
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: 0;
+  z-index: -1;
 }
 
 .footer {
